# ferivonus-swagger-gen-rust

./: Cargo.toml  README.md
examples/: test_server.rs
ferivonus-macros/: Cargo.toml  readme.md
ferivonus-macros/src/: lib.rs
header-html-macros/: Cargo.toml  readme.md
header-html-macros/src/: lib.rs
src/: lib.rs
