[package]
name = "ferivonus-swagger-gen"
version = "0.1.4"
edition = "2024"
description = "Automated, zero-configuration Swagger and OpenAPI documentation engine for Actix-web."
license = "MIT"
repository = "https://github.com/Ferivonus/ferivonus-swagger-gen-rust"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inventory = "0.3.22"
ferivonus-macros = { version = "0.1.0", path = "./header-html-macros" }
